# MoneyWizImport

./: .gitignore  README.md  pyproject.toml
src/moneywizimport/: cli_prepare_statement.py  config.yaml  generate_olx.py  olx-config.yaml
src/moneywizimport/core/: __init__.py  olx_generator.py  statement.py
src/moneywizimport/helpers/: __init__.py  config_helper.py  fs_helper.py  html_helper.py  zip_helper.py
